# test_task_senior_payment_processing

./: .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
infra/docker/: docker-compose-dev.yml  docker-compose.yml
infra/postgres/: postgres.conf
migrations/: env.py
migrations/versions/: 2bc4a22bab4b_indexes_and_uniqueness.py  7ef11ac9027d_update_schema.py  e706a1f3d6e2_update_schema.py
src/payment_service/: consumer.py  main.py
src/payment_service/application/payment/: uow.py
src/payment_service/application/payment/dto/: create.py  read.py
src/payment_service/application/payment/interfaces/: event_bus.py  uow.py  webhook_sender.py
src/payment_service/application/payment/use_cases/: create_payment.py  fetch_pendings.py  get_payment_by_id.py
src/payment_service/application/shared/: dto.py  errors.py  event_based_use_case.py  use_case.py
src/payment_service/application/shared/interfaces/: uow.py
src/payment_service/bootstrap/api/: app_factory.py  dependencies.py
src/payment_service/bootstrap/consumer/: app_factory.py
src/payment_service/domain/payment/: errors.py  event_repo.py  events.py  payment.py  repository.py  service.py
src/payment_service/domain/shared/: entity.py  errors.py  event.py  valueObject.py
src/payment_service/infra/payment/: uow.py
src/payment_service/infra/shared/: session.py
tests/unit/application/use_cases/: test_create_pay.py  test_get_by_id.py
tests/unit/domain/payment/: test_payment.py  test_payment_event_emission.py
tests/unit/infra/: test_outbox_repo.py  test_payment_repo.py
(+63 files in other folders)
