[project]
name = "payment-processing"
version = "0.0.1"
description = "Payment processing serivce for Secunda org as test task"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=9.6.2",
    "alembic>=1.18.4",
    "asyncio[asyncpg]>=4.0.0",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "faststream[cli,rabbit]>=0.6.7",
    "httpx>=0.28.1",
    "sqlalchemy[asyncpg]>=2.0.48",
    "structlog>=25.5.0",
    "uvicorn>=0.42.0",
    "uvloop>=0.22.1",
]

[tool.pyrefly]
project-includes = ["./src/payment_service/"]
project-excludes = ["**/.[!/.]*", "**/tests"]
search-path = ["./src/payment_service/"]
site-package-path = [".venv/lib/python3.*/site-packages"]
python-platform = "linux"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = true

[tool.pytest.ini_options]
pythonpath = ["./src/payment_service/"]
testpaths = ["tests"]
addopts = "-v -s --cov=src --cov-report=term-missing"
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "psycopg-binary>=3.3.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]
rl = [
    "aiosqlite>=0.22.1",
]
